# global-podcast-transcript-search-assistant

./: .gitignore  DESIGN_NOTE.md  README.md  pyproject.toml  streamlit_app.py
api/: __init__.py  main.py
src/app/: __init__.py  config.py  db.py  http.py
src/app/ingest/: service.py
src/app/migrations/: runner.py
src/podcast_search/: __init__.py  models.py
src/podcast_search/indexing/: chroma_store.py  chunking.py  embeddings.py  index_handle_cache.py
src/podcast_search/ingest/: rss_extract.py  service.py
src/podcast_search/metrics/: metrics_snapshot.py  (+1 more)
tests/: conftest.py
tests/contract/: test_api_feeds.py  test_api_metrics.py  test_api_search.py  test_metrics_openapi.py  test_streamlit_ui_smoke.py
tests/fixtures/: factories.py  rss_samples.py
tests/integration/: test_disk_reuse.py  test_disk_reuse_and_cache_backfill.py  test_distributed_storage_and_routing.py  test_ingest_dedup_and_aliases.py  test_ingest_dedupe_aliases.py  test_query_embedding_non_persistence.py  test_query_embedding_not_persisted.py  test_router_routing.py  test_search_scoping.py  test_search_scoping_and_shape.py
tests/live/: test_live_api_server_requests.py
tests/unit/: test_chunking_and_embeddings.py  test_consistent_hash.py  test_consistent_hash_and_nodes.py  test_index_handle_cache.py  test_phase2_additional_coverage.py  test_phase2_ingest_search_wiring.py  test_phase3_index_handle_cache_backfill.py  test_phase3_unit_ingest_components.py  test_query_planner.py  test_registry_normalization.py  test_router_core.py  test_rss_extract.py  test_search_response_shape.py
(+7 files in other folders)
